Continuing to settle some compilation errors.